# alfabeticaments

./: .gitignore  GEMINI.md  readme.md
backend/: Dockerfile  README.md  pyproject.toml
backend/api/: main.py  schemas.py
backend/api/routers/: auth.py  courses.py
backend/api/workouts/: courser.py
backend/app/: cli.py  lib.py  main.py  schemas.py
backend/app/database/: database.py  deps.py  models.py
backend/app/routers/: abc.py  auth.py  courses.py  hora.py  tests.py
backend/app/seed/: abcs.py  dev.py  dev_app.py  run_app.py  seed_workouts.py
backend/app/seed/code/: abc.json  courses.json  hora.json
backend/app/workouts/: courser.py  gtts_bar.py
backend/tests/: conftest.py  test_auth.py  test_courser.py  test_courses.py  test_main.py
frontend/: middleware.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/messages/: ca.json  es.json
frontend/src/: middleware.ts  proxy.ts
frontend/src/app/: layout.tsx
frontend/src/app/(login)/auth/: button-login.tsx
frontend/src/app/(mark)/: layout.tsx
frontend/src/app/(mark)/dash/: layout.tsx  page.tsx
frontend/src/app/(mark)/lesson/: page.tsx  (+1 more)
frontend/src/components/: AppToaster.tsx  ProviderCourses.tsx  auth.tsx  mode-toggle.tsx
frontend/src/components/abc/: AbcDosBar.tsx  DragDrop.tsx
frontend/src/components/abc-list/: abc-list-button.tsx  cycleIndex.ts  list-button.tsx
frontend/src/components/app/: app-sidebar.tsx  nav-user.tsx  team-switcher.tsx
frontend/src/components/div/: div-lesson.tsx
frontend/src/components/lessons/: footer-drag-drop.tsx  footer.tsx  header.tsx
frontend/src/components/lletres/: images-lesson.tsx  lletres-lesson.tsx  sound-old.tsx  sound.tsx
frontend/src/components/ui/: button.tsx
frontend/src/components/update/: use-abcedaris.tsx  user-hora.tsx
frontend/src/i18n/: request.ts
(+21 files in other folders)
