[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "httpx>=0.28.1",
    "mongomock>=4.3.0",
    "mongomock-motor>=0.0.36",
    "motor>=3.7.1",
    "passlib[bcrypt]>=1.7.4",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "python-jose>=3.5.0",
]


[tool.pytest.ini_options]
pythonpath = "."
filterwarnings = [
    "ignore::DeprecationWarning"
]
asyncio_mode = "strict"
anyio_backend = "asyncio"





[dependency-groups]
dev = [
    "pytest",
    "httpx"
]
